--- a/templates/hello.html
+++ b/templates/hello.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="hello.css">
 </head>
 <body>
     <h1>Hello, World!</h1>
